crates/analyzer/tests/snapshots/errors__struct_recursive_cycles.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: recursive struct `Foo`
  ┌─ compile_errors/struct_recursive_cycles.fe:3:8
  │
3 │ struct Foo {
  │        ^^^ struct `Foo` has infinite size due to recursive definition

error: recursive struct `Bar`
  ┌─ compile_errors/struct_recursive_cycles.fe:8:8
  │
8 │ struct Bar {
  │        ^^^ struct `Bar` has infinite size due to recursive definition

error: recursive struct `Foo2`
   ┌─ compile_errors/struct_recursive_cycles.fe:13:8
   │
13 │ struct Foo2 {
   │        ^^^^ struct `Foo2` has infinite size due to recursive definition


